--- a/Game/index.html
+++ b/Game/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>2DBGC-2021-11-18</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div id="screen">
-        <canvas width="512" height="448" id="gameCanvas"></canvas>
-        <div id="name">Lorem ipsum</div>
+      <canvas width="512" height="448" id="gameCanvas"></canvas>
+      <div id="name">Game</div>
     </div>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
