--- a/Assignment03/index.html
+++ b/Assignment03/index.html
@@ -29,7 +29,6 @@
       <canvas width="512" height="512" id="gameCanvas"></canvas>
       <div id="name"><p>Dynamic Image</p></div>
     </div>
-    <script src="./random-functions.js"></script>
     <script>
       //configuration
       const numberOfElements = 3;
@@ -58,9 +57,43 @@
       const canvas = document.querySelector("#gameCanvas");
       const context = canvas.getContext("2d");
 
+      //-----------------
+      //random generators
+      //-----------------
+
       function randomAngle() {
         return Math.random() * 2 * Math.PI;
       }
+
+      /**
+       * Returns random number between two extreme values.
+       * Source: https://stackoverflow.com/questions/4959975/generate-random-number-between-two-numbers-in-javascript
+       * @param minRandomNumber {number} minimum possible value
+       * @param maxRandomNumber {number} maximum possible value
+       * @returns {number}
+       */
+      let randomNumberBetween = (minRandomNumber, maxRandomNumber) => {
+        return Math.floor(
+          Math.random() * (maxRandomNumber - minRandomNumber + 1) +
+            minRandomNumber
+        );
+      };
+
+      /**
+       * Creates a random color in rgba format.
+       * Minimum alpha is 0.3 (30%)
+       * Example: rgba(123, 123, 123, 0.5)
+       * @returns {string}
+       */
+      let getRandomColor = () => {
+        let randomRed = randomNumberBetween(0, 255);
+        let randomGreen = randomNumberBetween(0, 255);
+        let randomBlue = randomNumberBetween(0, 255);
+        let randomAlpha = (Math.random() + 0.3).toFixed(2);
+
+        return `rgba(${randomRed}, ${randomGreen}, ${randomBlue}, ${randomAlpha})`;
+      };
+
 
       //----------------------------------
       //functions to draw different shapes
@@ -170,7 +203,6 @@
       //selection logic
       //---------------
 
-
       /*
       Returns an array of integers representing the different
       shapes in this code.
@@ -186,7 +218,7 @@
         }
         return shapes;
       }
-      
+
       function drawShapesToCanvas(shapes) {
         for (shape of shapes) {
           switch (shape) {
