Implement game loop with global patterns

--- a/Game/index.html
+++ b/Game/index.html
@@ -11,6 +11,6 @@
       <canvas width="512" height="448" id="gameCanvas"></canvas>
       <div id="name">Game</div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
