--- a/Game/index.html
+++ b/Game/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>2DBGC-2021-11-18</title>
+    <title>2DBGC-GAME-PROJECT</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
